--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <section style="font-family: Consolas, monospace;">
-      <div >Manuel Martínez</div>
+      <div >Test</div>
       <div><img src="yo.jpeg" alt="Tu foto aquí" /></div>
       <div class="gold">Ingeniero de sistemas · Creador · Analista</div>
     </section>
@@ -51,13 +51,13 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
             </button>
             <div class="plot-slide active">
-              <iframe src="fig1.html" frameborder="0"></iframe>
+              <iframe src="fig1.html" width="100%" height="500" frameborder="0"></iframe>
             </div>
             <div class="plot-slide">
-              <iframe src="fig2.html" frameborder="0"></iframe>
+              <iframe src="fig2.html" width="100%" height="500" frameborder="0"></iframe>
             </div>
             <div class="plot-slide">
-              <iframe src="fig3.html" frameborder="0"></iframe>
+              <iframe src="fig3.html" width="100%" height="500" frameborder="0"></iframe>
             </div>
             <button class="slide-btn next" onclick="plusPlot(1)">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg>
