--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="format-detection" content="telephone=no">
   <title>Pitch - Manuel Martínez</title>
   <link href="styles.css" rel="stylesheet">
 </head>
@@ -83,7 +84,7 @@
 
     <footer>
       <div>Creado para la Creatón 2026-1</div>
-      <ul>
+      <ul class="footer-ul">
         <li>(+57) 310 371 6820</li>
         <li>manuelmartinezr18@gmail.com</li>
       </ul>
