--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left-icon lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
             </button>
             <div class="plot-slide active">
-              <iframe src="fig1.html"></iframe>
+              <img src="fig1.png">
             </div>
             <div class="plot-slide">
-              <iframe src="fig2.html"></iframe>
+              <img src="fig2.png">
             </div>
             <div class="plot-slide">
-              <iframe src="fig3.html"></iframe>
+              <img src="fig3.png">
             </div>
             <button class="slide-btn next" onclick="plusPlot(1)">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg>
