Update header name and adjust pipeline diagram gap for better layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <section style="font-family: Consolas, monospace;">
-      <div >Test</div>
+      <div >Manuel Martínez</div>
       <div><img src="yo.jpeg" alt="Tu foto aquí" /></div>
       <div class="gold">Ingeniero de sistemas · Creador · Analista</div>
     </section>
