Add gap to list items in value proposition section for improved spacing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section>
       <div class="subt">Propuesta de valor</div>
-      <ul style="list-style-type: none;">
+      <ul style="list-style-type: none; gap:3px">
         <li>
           <span class="subt f1rem" > <span class="subt">1.</span> Automatización de procesos de datos</span>, implementando scripts en Python o
           flujos ETL para facilitar la carga y exportación de información desde
