Refactor list item styles in value proposition section for consistent spacing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
       <div class="subt">Propuesta de valor</div>
       <ul style="list-style-type: none; gap:6px">
-        <li>
+        <li style="margin-bottom: 5px;">
           <span class="subt f1rem" > <span class="subt">1.</span> Automatización de procesos de datos</span>, implementando scripts en Python o
           flujos ETL para facilitar la carga y exportación de información desde
           bases de datos.
@@ -36,15 +36,14 @@
             <div class="pipeline-step">Dashboard<br><small>KPIs • Tendencias (Plotly)</small></div>
           </div>
         </li>
-
         
 
-        <li>
+        <li style="margin-bottom: 5px;">
           <span class="subt f1rem"> <span class="subt">2.</span> Diseño y gestión de bases de datos SQL</span>, optimizando el almacenamiento y
           acceso a la información comercial.
         </li>
 
-        <li>
+        <li style="margin-bottom: 5px;">
           <span class="subt f1rem"> <span class="subt">3.</span> Desarrollo de reportes automáticos y dashboards</span>, que permitan el
           seguimiento ágil de KPIs y la toma de decisiones basadas en datos.
           <div id="plotly-slideshow" class="slideshow">
