Update list item margin for improved spacing in value proposition section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
       <div class="subt">Propuesta de valor</div>
       <ul style="list-style-type: none; gap:6px">
-        <li style="margin-bottom: 5px;">
+        <li style="margin-bottom: 1rem;">
           <span class="subt f1rem" > <span class="subt">1.</span> Automatización de procesos de datos</span>, implementando scripts en Python o
           flujos ETL para facilitar la carga y exportación de información desde
           bases de datos.
@@ -38,12 +38,12 @@
         </li>
         
 
-        <li style="margin-bottom: 5px;">
+        <li style="margin-bottom: 1rem;">
           <span class="subt f1rem"> <span class="subt">2.</span> Diseño y gestión de bases de datos SQL</span>, optimizando el almacenamiento y
           acceso a la información comercial.
         </li>
 
-        <li style="margin-bottom: 5px;">
+        <li style="margin-bottom: 1rem;">
           <span class="subt f1rem"> <span class="subt">3.</span> Desarrollo de reportes automáticos y dashboards</span>, que permitan el
           seguimiento ágil de KPIs y la toma de decisiones basadas en datos.
           <div id="plotly-slideshow" class="slideshow">
