Update job title in header section for accuracy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section style="font-family: Consolas, monospace;">
       <div >Manuel Martínez</div>
       <div><img src="yo.jpeg" alt="Tu foto aquí" /></div>
-      <div class="gold">Ingeniero de sistemas · Creador · Analista</div>
+      <div class="gold">Estudiante · Creador · Analista</div>
     </section>
 
     <section>
